--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,14 @@
   </head>
 
   <body>
-    <%= render 'navbar' %>
+    <div class="navbar-wagon">
+    <!-- Logo -->
+  <%= link_to "PokéMichelin", restaurants_path, class: "navbar-wagon-item navbar-wagon-link h_title" %>
+    <!-- Right Navigation -->
+    <div class="navbar-wagon-right hidden-xs hidden-sm">
+      <%= link_to "Add a Pokéresto", new_restaurant_path, class: "navbar-wagon-item navbar-wagon-link" %>
+    </div>
+  </div>
     <%= yield %>
   </body>
 </html>
