--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,17 @@
 // Specific CSS for your home-page
+.h_title {
+  font-size: 30px
+}
+
+.menu_icon{
+  width: 60px;
+}
+
+body {
+  background-image: linear-gradient(rgba(250,250,250,0.3), rgba(250,250,250,0.3)), url("https://source.unsplash.com/random/800x600");
+  background-size: cover;
+  text-shadow: 1px 2px white;
+  .btn {
+    text-shadow: none;
+  }
+}
