--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
   <body>
     <div class="navbar-wagon">
     <!-- Logo -->
-  <%= link_to "PokéMichelin", restaurants_path, class: "navbar-wagon-item navbar-wagon-link h_title" %>
+  <%= link_to restaurants_path, class: "navbar-wagon-item navbar-wagon-link h_title" do %>
+    <img alt="Icon" class="menu_icon" src="https://icon-icons.com/icons2/881/PNG/512/French_Fries_icon-icons.com_68745.png">
+  <% end %>
+    <%= link_to "PokéMichelin", restaurants_path, class: "navbar-wagon-item navbar-wagon-link h_title" %>
     <!-- Right Navigation -->
     <div class="navbar-wagon-right hidden-xs hidden-sm">
       <%= link_to "Add a Pokéresto", new_restaurant_path, class: "navbar-wagon-item navbar-wagon-link" %>
