--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,15 +1,19 @@
 <div class="container">
   <h1>Listes des restaurants :</h1>
-
   <div class="row">
   <% @restaurants.each do |restaurant| %>
-    <div class="col-xs-12 col-md-4 col-lg-3 card">
+    <div class="col-xs-12 col-md-4 col-lg-3">
       <%= link_to restaurant_path(restaurant) do %>
-        <h3><%= restaurant.name %> :</h3>
-        <p><%= restaurant.address %></p>
+        <div class="card_rest">
+          <div class="card-category"><%= restaurant.phone_number %></div>
+          <div class="card-description">
+            <h3><%= restaurant.name %> :</h3>
+            <p><%= restaurant.address %></p>
+          </div>
+          <img class="card-user" src="https://source.unsplash.com/random/50x50">
+        </div>
       <% end %>
     </div>
   <% end %>
   </div>
-
 </div>
