--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,9 +1,13 @@
-<div class="container">
-  <%= simple_form_for (@restaurant) do |f| %>
-    <%= f.input :name, placeholder: 'Pikachu' %>
-    <%= f.input :address, placeholder: '20 Sun street, BourgPalette' %>
-    <%= f.input :phone_number, placeholder: '(555) 454 344' %>
-    <%= f.input :category, collection: ["chinese", "italian", "japanese", "french", "belgian"] %>
-    <%= f.submit "Add a Pokéresto", class: "btn btn-primary" %>
-  <% end %>
+<div class="container text-center">
+  <h1>Ajouter votre Pokéresto</h1>
+    <div class="col-xs-12 col-md-offset-4 col-md-4 col-offset-4">
+    <%= simple_form_for (@restaurant) do |f| %>
+      <%= f.input :name, label: 'Restaurant name', placeholder: 'Pikachu' %>
+      <%= f.input :address, label: 'Restaurant address', placeholder: '20 Sun street, BourgPalette' %>
+      <%= f.input :phone_number, label: 'Restaurant phone number', placeholder: '(555) 454 344' %>
+      <%= f.input :category, label: 'Category of restaurant', collection: [['Chinese', 1], ['Italian', 2], ['French', 3], ['Japanese', 4], ['Belgian', 5]], class: 'form-control form-control-lg' %>
+      <em>Les champs avec " * " sont obligatoires</em><br>
+      <%= f.submit "Add a Pokéresto", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
