--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,11 @@
-<div class="container">
-  <%= simple_form_for [@restaurant, @review] do |f| %>
-    <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5] %>
-    <%= f.input :content %>
-    <%= f.submit "Add a review", class: "btn btn-primary" %>
-  <% end %>
+<div class="container text-center">
+  <h1>Ajouter votre Pokéreview</h1>
+  <div class="col-xs-12 col-md-offset-4 col-md-4 col-offset-4">
+    <%= simple_form_for [@restaurant, @review] do |f| %>
+      <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5] %>
+      <%= f.input :content %>
+      <em>Les champs avec " * " sont obligatoires</em><br>
+      <%= f.submit "Add a review", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
