--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-xs-12 col-md-4 col-lg-3">
       <%= link_to restaurant_path(restaurant) do %>
         <div class="card_rest">
-          <div class="card-category"><%= restaurant.phone_number %></div>
+          <div class="card-category"><%= restaurant.category %></div>
           <div class="card-description">
             <h3><%= restaurant.name %> :</h3>
             <p><%= restaurant.address %></p>
